--- a/index.html
+++ b/index.html
@@ -583,21 +583,27 @@
       <div class="card film">
         <h3>Team Foxcatcher (2016)</h3>
         <p class="desc">Critical reception, awards coverage, and press.</p>
-        <div class="actions">
-          <p class="desc">Penn Gazette — Team Foxcatcher reflects deep involvement by the Penn wrestling community featuring Jeremy Bailer and Ben Hatta.</p>
-  <div class="actions">
-    <a class="btn primary" href="https://thepenngazette.com/grappling-with-tragedy/" target="_blank" rel="noreferrer">
-      Penn Gazette: Grappling with Tragedy
-    </a>
-          <a class="btn primary" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
-            Rotten Tomatoes (Critics)
-          </a>
-          <a class="btn" href="https://www.imdb.com/title/tt5598216/?ref_=nv_sr_srsg_0_tt_1_nm_0_in_0_q_team%2520foxcatcher" target="_blank" rel="noreferrer">
-            IMDb
-          </a>
-          <a class="btn" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
-            Netflix Title Page
-          </a>
+       <p class="desc">
+  Penn Gazette — Team Foxcatcher reflects deep involvement by the Penn wrestling community featuring Jeremy Bailer and Ben Hatta.
+</p>
+
+<div class="actions">
+  <a class="btn primary" href="https://thepenngazette.com/grappling-with-tragedy/" target="_blank" rel="noreferrer">
+    Penn Gazette (Feature)
+  </a>
+
+  <a class="btn" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
+    Rotten Tomatoes (Critics)
+  </a>
+
+  <a class="btn" href="https://www.imdb.com/title/tt5598216/" target="_blank" rel="noreferrer">
+    IMDb
+  </a>
+
+  <a class="btn" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
+    Netflix Title Page
+  </a>
+</div>
         </div>
       </div>
 
