--- a/index.html
+++ b/index.html
@@ -591,6 +591,10 @@
   <a class="btn primary" href="https://thepenngazette.com/grappling-with-tragedy/" target="_blank" rel="noreferrer">
     Penn Gazette (Feature)
   </a>
+  
+  <a class="btn primary" href="https://www.emmys.com/shows/team-foxcatcher" target="_blank" rel="noreferrer">
+  Emmy Nomination Coverage
+</a>
 
   <a class="btn" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
     Rotten Tomatoes (Critics)
