--- a/index.html
+++ b/index.html
@@ -583,9 +583,7 @@
       <div class="card film">
         <h3>Team Foxcatcher (2016)</h3>
         <p class="desc">Critical reception, awards coverage, and press.</p>
-       <p class="desc">
-  Penn Gazette — Team Foxcatcher reflects deep involvement by the Penn wrestling community featuring Jeremy Bailer and Ben Hatta.
-</p>
+      
 
 <div class="actions">
   <a class="btn primary" href="https://thepenngazette.com/grappling-with-tragedy/" target="_blank" rel="noreferrer">
@@ -595,7 +593,9 @@
   <a class="btn primary" href="https://www.emmys.com/shows/team-foxcatcher" target="_blank" rel="noreferrer">
   Emmy Nomination Coverage
 </a>
-
+<a class="btn primary" href="https://stacker.com/stories/sports/best-sports-documentaries-all-time" target="_blank" rel="noreferrer">
+  Ranked Among Best Sports Documentaries
+</a>
   <a class="btn" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
     Rotten Tomatoes (Critics)
   </a>
