--- a/index.html
+++ b/index.html
@@ -596,15 +596,15 @@
 <a class="btn primary" href="https://stacker.com/stories/sports/best-sports-documentaries-all-time" target="_blank" rel="noreferrer">
   Ranked Among Best Sports Documentaries
 </a>
-  <a class="btn" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
+  <a class="btn primary" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
     Rotten Tomatoes (Critics)
   </a>
 
-  <a class="btn" href="https://www.imdb.com/title/tt5598216/" target="_blank" rel="noreferrer">
+  <a class="btn primary" href="https://www.imdb.com/title/tt5598216/" target="_blank" rel="noreferrer">
     IMDb
   </a>
 
-  <a class="btn" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
+  <a class="btn primary" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
     Netflix Title Page
   </a>
 </div>
