--- a/index.html
+++ b/index.html
@@ -600,9 +600,9 @@
     Rotten Tomatoes (Critics)
   </a>
 
-  <a class="btn primary" href="https://www.imdb.com/title/tt5598216/" target="_blank" rel="noreferrer">
-    IMDb
-  </a>
+  <a class="btn primary" href="https://m.imdb.com/search/title/?explore=title_type%2Cgenres&genres=sport%2Cdocumentary%2Ccrime" target="_blank" rel="noreferrer">
+  IMDb — Sports/Crime Doc Rankings
+</a>
 
   <a class="btn primary" href="https://www.netflix.com/title/80044093" target="_blank" rel="noreferrer">
     Netflix Title Page
