--- a/index.html
+++ b/index.html
@@ -596,6 +596,9 @@
 <a class="btn primary" href="https://stacker.com/stories/sports/best-sports-documentaries-all-time" target="_blank" rel="noreferrer">
   Ranked Among Best Sports Documentaries
 </a>
+  <a class="btn" href="https://www.menshealth.com/entertainment/g26837686/best-sports-documentaries-netflix/" target="_blank" rel="noreferrer">
+      Men’s Health — Best Sports Documentaries on Netflix
+    </a>
   <a class="btn primary" href="https://www.rottentomatoes.com/m/team_foxcatcher" target="_blank" rel="noreferrer">
     Rotten Tomatoes (Critics)
   </a>
