--- a/index.html
+++ b/index.html
@@ -631,9 +631,12 @@
           <a class="btn primary" href="https://www.imdb.com/title/tt1990314/news/" target="_blank" rel="noreferrer">
       IMDb – News &amp; Updates
     </a>
-          <a class="btn primary" href="https://en.wikipedia.org/wiki/Robot_%26_Frank" target="_blank" rel="noreferrer">
-            Wikipedia
-          </a>
+           <a class="btn primary" href="https://www.theguardian.com/film/2013/mar/07/robot-and-frank-review" target="_blank" rel="noreferrer">
+      The Guardian Review
+    </a>
+    <a class="btn primary" href="https://www.latimes.com/entertainment/envelope/la-xpm-2012-aug-19-la-et-mn-robot-frank-indie-focus-20120819-story.html" target="_blank" rel="noreferrer">
+      Los Angeles Times (Sundance Spotlight)
+    </a>
         </div>
       </div>
     </div>
