--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
     <div class="cols">
       <!-- TEAM FOXCATCHER -->
-      <div class="card film">
+      <div class="card film" style="grid-column: 1 / -1;">
         <h3>Team Foxcatcher (2016)</h3>
         <p class="desc">Critical reception, awards coverage, and press.</p>
       
