--- a/index.html
+++ b/index.html
@@ -664,9 +664,9 @@
     <a class="btn primary" href="https://www.cineoutsider.com/reviews/films/a/arcadia.html" target="_blank" rel="noreferrer">
       Cine Outsider Review
     </a> 
-          <a class="btn primary" href="https://www.imdb.com/title/tt2056520/?ref_=nv_sr_srsg_0_tt_7_nm_1_in_0_q_arcadia%25202012" target=" target="_blank" rel="noreferrer">
-            IMDb
-          </a>
+          <a class="btn" href="https://www.imdb.com/title/tt2056520/news/" target="_blank" rel="noreferrer">
+      IMDb News (Crystal Bear)
+    </a>
         
         </div>
       </div>
