--- a/index.html
+++ b/index.html
@@ -564,6 +564,10 @@
       <ul>
         <li><b>Team Foxcatcher (2016)</b> — Primetime Emmy nominee: <i>Outstanding Historical Documentary</i>.</li>
         <li><b>Arcadia (2012)</b> — Berlin International Film Festival (Generation 14plus): <i>Crystal Bear — Best Feature Film</i>.</li>
+        <li><b>Arcadia (2012)</b> — Nantucket Film Festival: <i>Winner — Adrienne Shelley Excellence in Filmmaking Award</i>.</li>
+        <li><b>Arcadia (2012)</b> — Oulu International Childern's Film Festival: <i>Winner — C.I.F.E.J Award for Best Picture</i>.</li>
+       <li><b>Arcadia (2012)</b> — Zlin International Film Festival: <i>Nominee — Golden Slipper for Best Feature Film for Youth</i>.</li>
+       <li><b>Arcadia (2012)</b> — Sarasota Film Festival: <i>Nominee — Jury Prize for Best Narrative Feature</i>.</li>
         <li><b>Robot &amp; Frank (2012)</b> — Sundance Film Festival: <i>Alfred P. Sloan Feature Film Prize</i> (winner).</li>
       </ul>
 
@@ -664,9 +668,7 @@
     <a class="btn primary" href="https://www.cineoutsider.com/reviews/films/a/arcadia.html" target="_blank" rel="noreferrer">
       Cine Outsider Review
     </a> 
-          <a class="btn" href="https://www.imdb.com/title/tt2056520/news/" target="_blank" rel="noreferrer">
-      IMDb News (Crystal Bear)
-    </a>
+        
         
         </div>
       </div>
