--- a/index.html
+++ b/index.html
@@ -563,12 +563,15 @@
     <div class="card film">
       <ul>
         <li><b>Team Foxcatcher (2016)</b> — Primetime Emmy nominee: <i>Outstanding Historical Documentary</i>.</li>
-        <li><b>Arcadia (2012)</b> — Berlin International Film Festival (Generation 14plus): <i>Crystal Bear — Best Feature Film</i>.</li>
+        <li><b>Team Foxcatcher (2016)</b> — Motion Picture Sound Editors, USA: <i>Nominee - Best Sound Editing</i>.</li>
+        <li><b>Team Foxcatcher (2016)</b> — Critics' Choice Documentary Awards: <i>Nominee - Best First Documentary (TV/Streaming)</i>.</li>
+        <li><b>Arcadia (2012)</b> — Berlin International Film Festival (Generation 14plus): <i>Crystal Bear — Best Feature Film</i>(winner).</li>
         <li><b>Arcadia (2012)</b> — Nantucket Film Festival: <i>Winner — Adrienne Shelley Excellence in Filmmaking Award</i>.</li>
         <li><b>Arcadia (2012)</b> — Oulu International Childern's Film Festival: <i>Winner — C.I.F.E.J Award for Best Picture</i>.</li>
        <li><b>Arcadia (2012)</b> — Zlin International Film Festival: <i>Nominee — Golden Slipper for Best Feature Film for Youth</i>.</li>
        <li><b>Arcadia (2012)</b> — Sarasota Film Festival: <i>Nominee — Jury Prize for Best Narrative Feature</i>.</li>
         <li><b>Robot &amp; Frank (2012)</b> — Sundance Film Festival: <i>Alfred P. Sloan Feature Film Prize</i> (winner).</li>
+        <li><b>Robot &amp; Frank (2012)</b> — Academy of Science Fiction, Fantasy & Horror Films, USA: <i>Nominee - Best Independent Film</i>.</li>
       </ul>
 
       <div class="mutedBox" style="margin-top:12px">
