--- a/index.html
+++ b/index.html
@@ -565,13 +565,17 @@
         <li><b>Team Foxcatcher (2016)</b> — Primetime Emmy nominee: <i>Outstanding Historical Documentary</i>.</li>
         <li><b>Team Foxcatcher (2016)</b> — Motion Picture Sound Editors, USA: <i>Nominee - Best Sound Editing</i>.</li>
         <li><b>Team Foxcatcher (2016)</b> — Critics' Choice Documentary Awards: <i>Nominee - Best First Documentary (TV/Streaming)</i>.</li>
-        <li><b>Arcadia (2012)</b> — Berlin International Film Festival (Generation 14plus): <i>Crystal Bear — Best Feature Film</i>(winner).</li>
+        <li><b>Arcadia (2012)</b> — Berlin International Film Festival (Generation 14plus): <i>Winner - Crystal Bear — Best Feature Film</i>(winner).</li>
         <li><b>Arcadia (2012)</b> — Nantucket Film Festival: <i>Winner — Adrienne Shelley Excellence in Filmmaking Award</i>.</li>
         <li><b>Arcadia (2012)</b> — Oulu International Childern's Film Festival: <i>Winner — C.I.F.E.J Award for Best Picture</i>.</li>
        <li><b>Arcadia (2012)</b> — Zlin International Film Festival: <i>Nominee — Golden Slipper for Best Feature Film for Youth</i>.</li>
        <li><b>Arcadia (2012)</b> — Sarasota Film Festival: <i>Nominee — Jury Prize for Best Narrative Feature</i>.</li>
-        <li><b>Robot &amp; Frank (2012)</b> — Sundance Film Festival: <i>Alfred P. Sloan Feature Film Prize</i> (winner).</li>
+        <li><b>Robot &amp; Frank (2012)</b> — Sundance Film Festival: <i>Winner - Alfred P. Sloan Feature Film Prize</i>.</li>
         <li><b>Robot &amp; Frank (2012)</b> — Academy of Science Fiction, Fantasy & Horror Films, USA: <i>Nominee - Best Independent Film</i>.</li>
+        <li><b>Robot &amp; Frank (2012)</b> — Stiges - Catalonian International Film Festival: <i>Winner - Audience Award for Best Motion Picture</i>.</li>
+      <li><b>Robot &amp; Frank (2012)</b> — Deauville Film Festival: <i>Nominee - Grand Speical Prize</i>.</li>
+        <li><b>Robot &amp; Frank (2012)</b> — Film Independent Spirit Awards: <i>Nominee - Best First Screenplay</i>.</li>
+        <li><b>Robot &amp; Frank (2012)</b> — Chlotrudis Awards: <i>Winner - Best Actor, Frank Langella</i>.</li>
       </ul>
 
       <div class="mutedBox" style="margin-top:12px">
@@ -652,7 +656,7 @@
 
     <div class="cols">
       <!-- ARCADIA -->
-      <div class="card film" style="grid-column: 1 / -1;">
+      <div class="card film">
         <h3>Arcadia (2012)</h3>
         <p class="desc">Festival reception and critical coverage.</p>
         <div class="actions">
