--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
 
     <div class="cols">
       <!-- ARCADIA -->
-    <div class="card film">
+    <div class="card film" style="grid-column: 1 / -1;">
   <h3>Arcadia (2012)</h3>
   <p class="desc">Festival reception and critical coverage.</p>
 
