--- a/index.html
+++ b/index.html
@@ -677,7 +677,30 @@
     </div>
   </div>
 </div>
+<!-- ANGLE (2023) — Reviews & Press -->
+<div class="card film" style="grid-column: 1 / -1;">
+  <h3>Angle (2023)</h3>
+  <p class="desc">Critical reviews, festival and press coverage for Angle (2023).</p>
 
+  <div class="actions">
+    <a class="btn primary" href="https://www.rogerebert.com/reviews/angle-movie-review-2023" target="_blank" rel="noreferrer">
+      RogerEbert.com Review
+    </a>
+
+    <a class="btn primary" href="https://variety.com/2023/film/reviews/angle-review-olympic-wrestling-documentary-1235776007/" target="_blank" rel="noreferrer">
+      Variety Review
+    </a>
+
+    <a class="btn primary" href="https://www.rottentomatoes.com/m/angle_2023" target="_blank" rel="noreferrer">
+      Rotten Tomatoes (Critics)
+    </a>
+
+    <a class="btn" href="https://www.indiewire.com/?s=angle+2023+documentary" target="_blank" rel="noreferrer">
+      IndieWire Coverage (Search)
+    </a>
+
+     </div>
+</div>
       
     </div>
   </div>
