--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
       Rotten Tomatoes (Critics)
     </a>
 
-    <a class="btn" href="https://www.indiewire.com/?s=angle+2023+documentary" target="_blank" rel="noreferrer">
+    <a class="btn primary" href="https://www.indiewire.com/?s=angle+2023+documentary" target="_blank" rel="noreferrer">
       IndieWire Coverage (Search)
     </a>
 
