--- a/index.html
+++ b/index.html
@@ -695,10 +695,7 @@
       Sports Illustrated — Documentary Feature
     </a>
 
-    <a class="btn primary" href="https://www.indiewire.com/?s=angle+2023+documentary" target="_blank" rel="noreferrer">
-      IndieWire Coverage (Search)
-    </a>
-<a class="btn" href="https://www.wrestlezone.com/news/1421984-kurt-angle-says-hell-be-an-advisor-for-a-movie-about-his-life-story" target="_blank" rel="noreferrer">
+   <a class="btn primary" href="https://www.wrestlezone.com/news/1421984-kurt-angle-says-hell-be-an-advisor-for-a-movie-about-his-life-story" target="_blank" rel="noreferrer">
       WrestleZone Coverage
     </a>
      </div>
