--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
       WorkingAuthor.com Review
     </a>
 
-    <a class="btn" href="https://vocal.media/geeks/my-review-of-someone-marry-barry" target="_blank" rel="noreferrer">
+    <a class="btn primary" href="https://vocal.media/geeks/my-review-of-someone-marry-barry" target="_blank" rel="noreferrer">
       Vocal Media Review
     </a>
   </div>
