--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="nuaVMkSy5qJq17mYYA7I87VKaSBnLpvMVoKGxo16eC8" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Madrose Productions — Films by Jeremy Bailer</title>
