--- a/index.html
+++ b/index.html
@@ -6,6 +6,106 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Madrose Productions — Films by Jeremy Bailer</title>
   <meta name="description" content="Madrose Productions showcases films and documentaries produced by Jeremy Bailer — trailers, awards, press, and where to watch." />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Madrose Productions",
+  "url": "https://jerbailer.github.io/madroseproductions.github.io/",
+  "logo": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png",
+  "founder": {
+    "@type": "Person",
+    "name": "Jeremy Bailer"
+  },
+  "sameAs": [
+    "https://www.imdb.com/name/nm2565301/"
+  ]
+}
+</script>
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Jeremy Bailer",
+  "jobTitle": "Film Producer",
+  "affiliation": {
+    "@type": "Organization",
+    "name": "Madrose Productions"
+  },
+  "alumniOf": {
+    "@type": "CollegeOrUniversity",
+    "name": "University of Pennsylvania"
+  },
+  "sameAs": [
+    "https://www.imdb.com/name/nm2565301/"
+  ]
+}
+</script> 
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Movie",
+  "name": "Team Foxcatcher",
+  "datePublished": "2016",
+  "director": {
+    "@type": "Person",
+    "name": "Jon Greenhalgh"
+  },
+  "producer": {
+    "@type": "Person",
+    "name": "Jeremy Bailer"
+  },
+  "description": "A documentary examining the tragic story of Olympic wrestler Dave Schultz and the downfall of John du Pont.",
+  "award": [
+    "Primetime Emmy Award Nominee – Outstanding Historical Documentary"
+  ],
+  "sameAs": [
+    "https://www.imdb.com/title/tt5598216/",
+    "https://www.netflix.com/title/80044093"
+  ]
+}
+</script> 
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Movie",
+  "name": "Robot & Frank",
+  "datePublished": "2012",
+  "director": {
+    "@type": "Person",
+    "name": "Jake Schreier"
+  },
+  "producer": {
+    "@type": "Person",
+    "name": "Jeremy Bailer"
+  },
+  "award": [
+    "Sundance Film Festival – Alfred P. Sloan Feature Film Prize"
+  ],
+  "sameAs": [
+    "https://www.imdb.com/title/tt1990314/"
+  ]
+}
+</script> 
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Movie",
+  "name": "Arcadia",
+  "datePublished": "2012",
+  "producer": {
+    "@type": "Person",
+    "name": "Jeremy Bailer"
+  },
+  "award": [
+    "Berlin International Film Festival – Crystal Bear (Winner)"
+  ],
+  "sameAs": [
+    "https://www.imdb.com/title/tt1781841/"
+  ]
+}
+</script> 
+  
   <style>
     :root{
       --bg:#0b0c10;
