--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
       <div class="card heroCard">
         <h1>Madrose Productions</h1>
         <p class="kicker">
-          Films and documentaries produced by <b>Jeremy Bailer</b>.
-          Watch trailers, see awards & nominations, and find the best way to stream each title.
+          Madrose Productions is an award winning boutique film and television production company owned and operated by <b>Jeremy Bailer</b>.
+          Madrose's films have been nominated and won many awards across the globe including an Emmy nomination, the Alfred P Sloane award at Sundance, and the Crystal Bear in Berlin.
         </p>
 
         <div class="pillRow">
