--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,27 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
     window.location.href = "mailto:" + EMAIL + "?subject=" + fullSubject + "&body=" + body;
   });
 </script>
-<div style="
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Angle (2023) – Official Trailer",
+  "description": "Official trailer for Angle (2023), a documentary produced by Jeremy Bailer exploring Kurt Angle’s journey from Olympic gold to WWE Hall of Fame.",
+  "thumbnailUrl": "https://img.youtube.com/vi/ZcuZefFz1xw/maxresdefault.jpg",
+  "uploadDate": "2023-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=ZcuZefFz1xw",
+  "embedUrl": "https://www.youtube.com/embed/ZcuZefFz1xw",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script>
+        <div style="
   width:100%;
   background:black;
   padding:40px 20px;
