--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,26 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
   }
 }
 </script>
+       <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Team Foxcatcher (2016) – Official Trailer",
+  "description": "Official trailer for Team Foxcatcher (2016), an Emmy-nominated documentary produced by Jeremy Bailer about the tragic true story surrounding Olympic wrestling and the Foxcatcher scandal.",
+  "thumbnailUrl": "https://img.youtube.com/vi/WZczesrBFRA/maxresdefault.jpg",
+  "uploadDate": "2016-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=WZczesrBFRA",
+  "embedUrl": "https://www.youtube.com/embed/WZczesrBFRA",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script> 
         <div style="
   width:100%;
   background:black;
