--- a/index.html
+++ b/index.html
@@ -1106,6 +1106,115 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
   }
 }
 </script> 
+     <!-- Robot & Frank (2012) Trailer -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Robot & Frank (2012) – Official Trailer",
+  "description": "Official trailer for Robot & Frank (2012), a sci-fi comedy-drama produced by Jeremy Bailer. Winner of the Alfred P. Sloan Feature Film Prize at the 2012 Sundance Film Festival.",
+  "thumbnailUrl": "https://img.youtube.com/vi/q4y8YAMPFhk/maxresdefault.jpg",
+  "uploadDate": "2012-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=q4y8YAMPFhk",
+  "embedUrl": "https://www.youtube.com/embed/q4y8YAMPFhk",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script>
+
+<!-- Arcadia (2012) Trailer -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Arcadia (2012) – Official Trailer",
+  "description": "Official trailer for Arcadia (2012), produced by Jeremy Bailer and directed by Olivia Silver. Winner of the Crystal Bear at the Berlin International Film Festival (Generation 14plus).",
+  "thumbnailUrl": "https://img.youtube.com/vi/Ar2RCkgNyGw/maxresdefault.jpg",
+  "uploadDate": "2012-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=Ar2RCkgNyGw",
+  "embedUrl": "https://www.youtube.com/embed/Ar2RCkgNyGw",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script>
+
+<!-- Someone Marry Barry (2014) Trailer -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Someone Marry Barry (2014) – Official Trailer",
+  "description": "Official trailer for Someone Marry Barry (2014), a comedy film produced by Jeremy Bailer.",
+  "thumbnailUrl": "https://img.youtube.com/vi/Oaw6asSUeB8/maxresdefault.jpg",
+  "uploadDate": "2014-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=Oaw6asSUeB8",
+  "embedUrl": "https://www.youtube.com/embed/Oaw6asSUeB8",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script>
+
+<!-- The New Republic (2011) Trailer -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "The New Republic (2011) – Official Trailer",
+  "description": "Official trailer for The New Republic (2011), a thriller produced by Jeremy Bailer.",
+  "thumbnailUrl": "https://img.youtube.com/vi/WjF2za6ONoY/maxresdefault.jpg",
+  "uploadDate": "2011-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=WjF2za6ONoY",
+  "embedUrl": "https://www.youtube.com/embed/WjF2za6ONoY",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script>
+
+<!-- Clash of Dynasties Trailer -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Clash of Dynasties – Official Trailer",
+  "description": "Official trailer for Clash of Dynasties: St. Edward vs Walsh Jesuit (docuseries).",
+  "thumbnailUrl": "https://img.youtube.com/vi/D0LrQZlEUO8/maxresdefault.jpg",
+  "uploadDate": "2022-01-01",
+  "contentUrl": "https://www.youtube.com/watch?v=D0LrQZlEUO8",
+  "embedUrl": "https://www.youtube.com/embed/D0LrQZlEUO8",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://jerbailer.github.io/madroseproductions.github.io/madrose-logo.png"
+    }
+  }
+}
+</script>   
         <div style="
   width:100%;
   background:black;
