--- a/index.html
+++ b/index.html
@@ -1223,5 +1223,10 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
 ">
   <img src="madrose-logo.png" style="max-width:900px;width:100%;height:auto;">
 </div>
-</body>
+<footer style="text-align:center;padding:40px 20px;background:#000;">
+  <a href="press.html" style="color:#f5b000;text-decoration:none;font-weight:bold;">
+    Press & Media
+  </a>
+</footer>
+      </body>
 </html>
