--- a/index.html
+++ b/index.html
@@ -1224,8 +1224,11 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
   <img src="madrose-logo.png" style="max-width:900px;width:100%;height:auto;">
 </div>
 <footer style="text-align:center;padding:40px 20px;background:#000;">
-  <a href="press.html" style="color:#f5b000;text-decoration:none;font-weight:bold;">
+  <a href="press.html" style="color:#f5b000;text-decoration:none;font-weight:bold;margin-right:20px;">
     Press & Media
+  </a>
+  <a href="jeremy-bailer.html" style="color:#f5b000;text-decoration:none;font-weight:bold;">
+    About Jeremy Bailer
   </a>
 </footer>
       </body>
