--- a/jeremy-bailer.html
+++ b/jeremy-bailer.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Jeremy Bailer",
+  "url": "https://jerbailer.github.io/madroseproductions.github.io/jeremy-bailer.html",
+  "jobTitle": "Film Producer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Madrose Productions",
+    "url": "https://jerbailer.github.io/madroseproductions.github.io/"
+  },
+  "sameAs": [
+    "https://jerbailer.github.io/madroseproductions.github.io/"
+  ]
+}
+</script>
+  <head>
   <meta charset="UTF-8">
   <title>Jeremy Bailer | Film Producer</title>
   <meta name="description" content="Jeremy Bailer is a film producer and founder of Madrose Productions, known for documentary and narrative films.">
