--- a/press.html
+++ b/press.html
@@ -16,7 +16,9 @@
     original films with an emphasis on real people, authentic experiences,
     and emotionally grounded stories.
   </p>
-
+<p>
+  Founder and producer <a href="jeremy-bailer.html" style="color:#f5b000;">Jeremy Bailer</a>.
+</p>
   <hr>
 
   <h2>Angle (2023)</h2>
