--- a/jeremy-bailer.html
+++ b/jeremy-bailer.html
@@ -5,6 +5,7 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Jeremy Bailer",
+  "image": "https://jerbailer.github.io/madroseproductions.github.io/jeremy-bailer.jpg",
   "url": "https://jerbailer.github.io/madroseproductions.github.io/jeremy-bailer.html",
   "jobTitle": "Film Producer",
   "worksFor": {
@@ -28,7 +29,7 @@
 <body style="background:#000;color:#fff;font-family:Arial,Helvetica,sans-serif;max-width:900px;margin:0 auto;padding:40px;">
 
   <h1>Jeremy Bailer</h1>
-
+<img src="jeremy-bailer.jpg" alt="Jeremy Bailer" style="max-width:300px;margin:20px 0;">
   <p>
     <strong>Jeremy Bailer</strong> is a film producer and founder of
     <a href="index.html" style="color:#f5b000;">Madrose Productions</a>.
