--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   "founder": {
     "@type": "Person",
     "name": "Jeremy Bailer"
+    "url": "https://jerbailer.github.io/madroseproductions.github.io/jeremy-bailer.html"
   },
   "sameAs": [
     "https://www.imdb.com/name/nm2565301/"
