--- a/jeremy-bailer.html
+++ b/jeremy-bailer.html
@@ -51,6 +51,7 @@ He received an Emmy nomination for Outstanding Historical Documentary for his wo
   <ul>
     <li><a href="press.html" style="color:#f5b000;">Press & Media</a></li>
     <li><a href="index.html" style="color:#f5b000;">Official Site</a></li>
+    <li><a href="https://medium.com/@jerbailer/jeremy-bailer-8e6d358629d2" style="color:#f5b000;">Jeremy Bailer on Medium</a></li>
   </ul>
 
 </body>
