--- a/jeremy-bailer.html
+++ b/jeremy-bailer.html
@@ -53,6 +53,24 @@ He received an Emmy nomination for Outstanding Historical Documentary for his wo
     <li><a href="index.html" style="color:#f5b000;">Official Site</a></li>
     <li><a href="https://medium.com/@jerbailer/jeremy-bailer-8e6d358629d2" style="color:#f5b000;">Jeremy Bailer on Medium</a></li>
   </ul>
+<h2>Podcasts & Interviews</h2>
 
+<ul>
+  <li>
+    <strong>Breakdown from the Barn – Episode 57</strong><br>
+    Discussion on wrestling, filmmaking, and Team Foxcatcher.<br>
+    <a href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" style="color:#f5b000;">
+      Watch on YouTube
+    </a>
+  </li>
+
+  <li style="margin-top:15px;">
+    <strong>Wrestling Changed My Life</strong><br>
+    Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.<br>
+    <a href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" style="color:#f5b000;">
+      Listen to episode
+    </a>
+  </li>
+</ul>
 </body>
 </html>
