--- a/index.html
+++ b/index.html
@@ -877,6 +877,34 @@
       </div>
     </div>
   </section>
+  <section id="media-podcasts" class="section">
+  <div class="wrap">
+    <h2>Media & Podcasts</h2>
+
+    <p>
+      Madrose Productions and its founders have been featured on podcasts
+      discussing filmmaking, wrestling culture, and documentary storytelling.
+    </p>
+
+    <ul>
+      <li>
+        <strong>Breakdown from the Barn – Episode 57</strong><br>
+        Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.<br>
+        <a href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
+          Watch on YouTube
+        </a>
+      </li>
+
+      <li style="margin-top:15px;">
+        <strong>Wrestling Changed My Life</strong><br>
+        Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.<br>
+        <a href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" rel="noreferrer">
+          Listen to episode
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
 <section id="presskit" class="section">
   <div class="wrap">
     <h2>Press Kit</h2>
