--- a/index.html
+++ b/index.html
@@ -887,6 +887,21 @@
     </p>
 
     <ul>
+      <li style="margin-top:15px;">
+  <strong>Breakdown from the Barn – Episode 21</strong><br>
+  Discussion with Jeremy Bailer and Ben Hatta on <em>Clash of Dynasties</em> and documentary filmmaking.<br>
+  <a href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
+    Watch on YouTube
+  </a>
+</li>
+
+<li style="margin-top:15px;">
+  <strong>Breakdown from the Barn – Episode 22</strong><br>
+  Continued conversation on <em>Clash of Dynasties</em>, wrestling culture, and film production.<br>
+  <a href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
+    Watch on YouTube
+  </a>
+</li>
       <li>
         <strong>Breakdown from the Barn – Episode 57</strong><br>
         Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.<br>
