--- a/index.html
+++ b/index.html
@@ -917,6 +917,13 @@
           Listen to episode
         </a>
       </li>
+      <li style="margin-top:15px;">
+  <strong>Interview: The Moving Parts of <em>Team Foxcatcher</em></strong><br>
+  Jeremy Bailer discusses the production process, structure, and behind-the-scenes elements of <em>Team Foxcatcher</em>.<br>
+  <a href="https://www.youtube.com/watch?v=xxPkg_fL7FE" target="_blank" rel="noreferrer">
+    Watch interview on YouTube
+  </a>
+</li>
     </ul>
   </div>
 </section>
