--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
       </div>
     </div>
   </section>
-  <section id="media-podcasts" class="section">
+ <section id="media-podcasts" class="section">
   <div class="wrap">
     <h2>Media & Podcasts</h2>
 
@@ -886,45 +886,57 @@
       discussing filmmaking, wrestling culture, and documentary storytelling.
     </p>
 
-    <ul>
-      <li style="margin-top:15px;">
-  <strong>Breakdown from the Barn – Episode 21</strong><br>
-  Discussion with Jeremy Bailer and Ben Hatta on <em>Clash of Dynasties</em> and documentary filmmaking.<br>
-  <a href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
-    Watch on YouTube
-  </a>
-</li>
+    <div class="grid">
+      <div class="card film">
+        <h3>Breakdown from the Barn – Episode 21</h3>
+        <p>Discussion with Jeremy Bailer and Ben Hatta on <em>Clash of Dynasties</em> and documentary filmmaking.</p>
+        <p>
+          <a href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
+            Watch on YouTube
+          </a>
+        </p>
+      </div>
 
-<li style="margin-top:15px;">
-  <strong>Breakdown from the Barn – Episode 22</strong><br>
-  Continued conversation on <em>Clash of Dynasties</em>, wrestling culture, and film production.<br>
-  <a href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
-    Watch on YouTube
-  </a>
-</li>
-      <li>
-        <strong>Breakdown from the Barn – Episode 57</strong><br>
-        Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.<br>
-        <a href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
-          Watch on YouTube
-        </a>
-      </li>
+      <div class="card film">
+        <h3>Breakdown from the Barn – Episode 22</h3>
+        <p>Continued conversation on <em>Clash of Dynasties</em>, wrestling culture, and film production.</p>
+        <p>
+          <a href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
+            Watch on YouTube
+          </a>
+        </p>
+      </div>
 
-      <li style="margin-top:15px;">
-        <strong>Wrestling Changed My Life</strong><br>
-        Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.<br>
-        <a href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" rel="noreferrer">
-          Listen to episode
-        </a>
-      </li>
-      <li style="margin-top:15px;">
-  <strong>Interview: The Moving Parts of <em>Team Foxcatcher</em></strong><br>
-  Jeremy Bailer discusses the production process, structure, and behind-the-scenes elements of <em>Team Foxcatcher</em>.<br>
-  <a href="https://www.youtube.com/watch?v=xxPkg_fL7FE" target="_blank" rel="noreferrer">
-    Watch interview on YouTube
-  </a>
-</li>
-    </ul>
+      <div class="card film">
+        <h3>Breakdown from the Barn – Episode 57</h3>
+        <p>Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.</p>
+        <p>
+          <a href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
+            Watch on YouTube
+          </a>
+        </p>
+      </div>
+
+      <div class="card film">
+        <h3>Wrestling Changed My Life</h3>
+        <p>Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.</p>
+        <p>
+          <a href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" rel="noreferrer">
+            Listen to episode
+          </a>
+        </p>
+      </div>
+
+      <div class="card film">
+        <h3>Interview: The Moving Parts of <em>Team Foxcatcher</em></h3>
+        <p>Jeremy Bailer discusses the production process, structure, and behind-the-scenes elements of <em>Team Foxcatcher</em>.</p>
+        <p>
+          <a href="https://www.youtube.com/watch?v=xxPkg_fL7FE" target="_blank" rel="noreferrer">
+            Watch interview on YouTube
+          </a>
+        </p>
+      </div>
+    </div>
   </div>
 </section>
 <section id="presskit" class="section">
