--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
         <h3>Breakdown from the Barn – Episode 21</h3>
         <p>Discussion with Jeremy Bailer and Ben Hatta on <em>Clash of Dynasties</em> and documentary filmmaking.</p>
         <p>
-          <a href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
             Watch on YouTube
           </a>
         </p>
@@ -901,7 +901,7 @@
         <h3>Breakdown from the Barn – Episode 22</h3>
         <p>Continued conversation on <em>Clash of Dynasties</em>, wrestling culture, and film production.</p>
         <p>
-          <a href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
             Watch on YouTube
           </a>
         </p>
@@ -911,7 +911,7 @@
         <h3>Breakdown from the Barn – Episode 57</h3>
         <p>Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.</p>
         <p>
-          <a href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
             Watch on YouTube
           </a>
         </p>
@@ -921,7 +921,7 @@
         <h3>Wrestling Changed My Life</h3>
         <p>Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.</p>
         <p>
-          <a href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" rel="noreferrer">
             Listen to episode
           </a>
         </p>
@@ -931,7 +931,7 @@
         <h3>Interview: The Moving Parts of <em>Team Foxcatcher</em></h3>
         <p>Jeremy Bailer discusses the production process, structure, and behind-the-scenes elements of <em>Team Foxcatcher</em>.</p>
         <p>
-          <a href="https://www.youtube.com/watch?v=xxPkg_fL7FE" target="_blank" rel="noreferrer">
+          <a class="btn primary" href="https://www.youtube.com/watch?v=xxPkg_fL7FE" target="_blank" rel="noreferrer">
             Watch interview on YouTube
           </a>
         </p>
