--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
     <h2>Media & Podcasts</h2>
 
     <p>
-      Madrose Productions and its founders have been featured on podcasts
+      Madrose Productions and its partners have been featured on podcasts
       discussing filmmaking, wrestling culture, and documentary storytelling.
     </p>
 
