--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
     <div class="grid">
       <div class="card film">
         <h3>Breakdown from the Barn – Episode 21</h3>
-        <p>Discussion with Jeremy Bailer and Ben Hatta on <em>Clash of Dynasties</em> and documentary filmmaking.</p>
+        <p>Discussion with Jeremy Bailer and Ben Hatta on <em>Team Foxcatcher</em> and<em>Angle</em> and documentary filmmaking.</p>
         <p>
           <a class="btn primary" href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
             Watch on YouTube
@@ -888,7 +888,7 @@
 
       <div class="card film">
         <h3>Breakdown from the Barn – Episode 22</h3>
-        <p>Continued conversation on <em>Clash of Dynasties</em>, wrestling culture, and film production.</p>
+        <p>Continued conversation on <em>Team Foxcatcher</em>, <em>Angle</em>, wrestling culture, and film production.</p>
         <p>
           <a class="btn primary" href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
             Watch on YouTube
@@ -898,7 +898,7 @@
 
       <div class="card film">
         <h3>Breakdown from the Barn – Episode 57</h3>
-        <p>Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.</p>
+        <p>Conversation on wrestling, filmmaking, and <em>Clash of Dynasties</em>.</p>
         <p>
           <a class="btn primary" href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
             Watch on YouTube
