--- a/jeremy-bailer.html
+++ b/jeremy-bailer.html
@@ -53,24 +53,58 @@ He received an Emmy nomination for Outstanding Historical Documentary for his wo
     <li><a href="index.html" style="color:#f5b000;">Official Site</a></li>
     <li><a href="https://medium.com/@jerbailer/jeremy-bailer-8e6d358629d2" style="color:#f5b000;">Jeremy Bailer on Medium</a></li>
   </ul>
-<h2>Podcasts & Interviews</h2>
+<h2 id="podcasts">Podcasts & Interviews</h2>
 
-<ul>
-  <li>
-    <strong>Breakdown from the Barn – Episode 57</strong><br>
-    Discussion on wrestling, filmmaking, and Team Foxcatcher.<br>
-    <a href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" style="color:#f5b000;">
-      Watch on YouTube
-    </a>
-  </li>
+<div class="grid">
+  <div class="card film">
+    <h3>Breakdown from the Barn – Episode 21</h3>
+    <p>Discussion with Jeremy Bailer and Ben Hatta on <em>Clash of Dynasties</em> and documentary filmmaking.</p>
+    <p>
+      <a class="btn primary" href="https://www.youtube.com/watch?v=WCmh8iIy9HE" target="_blank" rel="noreferrer">
+        Watch on YouTube
+      </a>
+    </p>
+  </div>
 
-  <li style="margin-top:15px;">
-    <strong>Wrestling Changed My Life</strong><br>
-    Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.<br>
-    <a href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" style="color:#f5b000;">
-      Listen to episode
-    </a>
-  </li>
-</ul>
+  <div class="card film">
+    <h3>Breakdown from the Barn – Episode 22</h3>
+    <p>Continued conversation on <em>Clash of Dynasties</em>, wrestling culture, and film production.</p>
+    <p>
+      <a class="btn primary" href="https://www.youtube.com/watch?v=Iv9y4dVThAE" target="_blank" rel="noreferrer">
+        Watch on YouTube
+      </a>
+    </p>
+  </div>
+
+  <div class="card film">
+    <h3>Breakdown from the Barn – Episode 57</h3>
+    <p>Conversation on wrestling, filmmaking, and <em>Team Foxcatcher</em>.</p>
+    <p>
+      <a class="btn primary" href="https://www.youtube.com/watch?v=i30AVKfZIBA" target="_blank" rel="noreferrer">
+        Watch on YouTube
+      </a>
+    </p>
+  </div>
+
+  <div class="card film">
+    <h3>Wrestling Changed My Life</h3>
+    <p>Jeremy Bailer and Ben Hatta discuss producing <em>Team Foxcatcher</em> and <em>Angle</em>.</p>
+    <p>
+      <a class="btn primary" href="https://wrestlingchangedmylife.com/358-jeremy-bailer-and-ben-hatta-producers-for-team-foxcatcher-and-angle/" target="_blank" rel="noreferrer">
+        Listen to episode
+      </a>
+    </p>
+  </div>
+
+  <div class="card film">
+    <h3>Interview: The Moving Parts of <em>Team Foxcatcher</em></h3>
+    <p>Jeremy Bailer discusses the production process, structure, and behind-the-scenes elements of <em>Team Foxcatcher</em>.</p>
+    <p>
+      <a class="btn primary" href="https://www.youtube.com/watch?v=xxPkg_fL7FE" target="_blank" rel="noreferrer">
+        Watch interview on YouTube
+      </a>
+    </p>
+  </div>
+</div>
 </body>
 </html>
