--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
       <div class="card heroCard">
         <h1>Madrose Productions</h1>
         <p class="kicker">
-          Madrose Productions is an award winning boutique film and television production company owned and operated by <b>Jeremy Bailer</b>.
+          Madrose Productions is an award winning boutique film and television production company owned and operated by <a href="jeremy-bailer.html"><b>Jeremy Bailer</b></a>.
           Madrose's films have been nominated and won many awards across the globe including an Emmy nomination, the Alfred P. Sloan award at Sundance, and the Crystal Bear in Berlin.
         </p>
 
