--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
           <div class="actions">
            
           
-            <a class="btn" href="https://www.rottentomatoes.com/" target="_blank" rel="noreferrer">Ratings</a>
+            <a class="btn primary" href="https://www.youtube.com/watch?v=ZcuZefFz1xw" target="_blank" rel="noreferrer">
+  Watch trailer on YouTube
+</a>
           </div>
         </article>
 
