--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,17 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
   padding:40px 20px;
   text-align:center;
 ">
-  <img src="madrose-logo.png" style="max-width:900px;width:100%;height:auto;">
+<video
+  autoplay
+  muted
+  loop
+  playsinline
+  preload="metadata"
+  style="max-width:900px;width:100%;height:auto;opacity:0.9;"
+>
+  <source src="madrose-logo-v2.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video> 
 </div>
 <footer style="text-align:center;padding:40px 20px;background:#000;">
   <a href="press.html" style="color:#f5b000;text-decoration:none;font-weight:bold;margin-right:20px;">
