--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
 
       <div class="actions">
         <a class="btn primary" href="#films">Browse Films</a>
-        <a class="btn" href="#contact">Contact</a>
+        <a class="btn primary" href="#contact">Contact</a>
       </div>
 
     </div>
