--- a/index.html
+++ b/index.html
@@ -1282,6 +1282,16 @@ if (emailLinkBtn) emailLinkBtn.href = "mailto:" + EMAIL;
   <source src="madrose-logo-v2.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video> 
+<div style="text-align:center; margin-top:22px;">
+  <div style="
+    font-size:0.95rem;
+    letter-spacing:0.18em;
+    color:#bdbdbd;
+    text-transform:uppercase;
+  ">
+    Cinematic production and storytelling
+  </div>
+</div>
 </div>
 <footer style="text-align:center;padding:40px 20px;background:#000;">
   <a href="press.html" style="color:#f5b000;text-decoration:none;font-weight:bold;margin-right:20px;">
