--- a/index.html
+++ b/index.html
@@ -282,16 +282,22 @@
 <body>
   <div style="
   width:100%;
-  background:#000;
-  padding:40px 20px;
+  background:
+    radial-gradient(
+      circle at center,
+      rgba(255,255,255,0.06) 0%,
+      rgba(0,0,0,0) 60%
+    ),
+    #000;
+  padding:60px 20px;
   text-align:center;
   border-bottom:1px solid rgba(255,255,255,0.1);
 ">
 <img
  src="madrose-logo.png"
     alt="Madrose Productions logo"
-    style="max-width:900px;width:100%;height:auto;display:inline-block"
-  > 
+    style="max-width:900px;width:100%;height:auto;display:inline-block;opacity:0.95"  
+  /> 
 </div>
 <header>
   <div class="wrap nav">
