--- a/index.html
+++ b/index.html
@@ -282,14 +282,8 @@
 <body>
   <div style="
   width:100%;
-  background:
-    radial-gradient(
-      circle at center,
-      rgba(255,255,255,0.12) 0%,
-      rgba(0,0,0,0) 75%
-    ),
-    #000;
-  padding:60px 20px;
+ background:#000;
+    padding:60px 20px;
   text-align:center;
   border-bottom:1px solid rgba(255,255,255,0.1);
 ">
